# eidetic

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml  rust.yml
scripts/: install.js
skills/: SKILL.md
skills/agents/: openai.yaml
src/: constants.rs  main.rs  update.rs
src/auth/: keychain.rs  mod.rs
src/config/: mod.rs
src/harbor/: artifacts.rs  mod.rs
src/memory/: types.rs
src/server/: handler.rs  mod.rs
src/setup/: harbor.rs  mcp_clients.rs  memwal.rs  mod.rs  utils.rs
src/storage/: file_storage.rs  memory_store.rs  memwal_storage.rs  mod.rs  sqlite_storage.rs
src/tools/: mod.rs
src/tools/advanced/: mem_capture_passive.rs  mem_compare.rs  mem_judge.rs  mem_review.rs  mem_timeline.rs  mod.rs
src/tools/core/: mem_delete.rs  mem_get_observation.rs  mem_save.rs  mem_save_prompt.rs  mem_search.rs  mem_suggest_topic_key.rs  mem_update.rs  mod.rs
src/tools/harbor/: mem_get_artifact.rs  mem_save_artifact.rs  mod.rs
src/tools/memwal/: memwal_batch.rs  memwal_recall.rs  memwal_remember.rs  mod.rs
src/tools/project/: mem_current_project.rs  mem_merge_projects.rs  mod.rs
src/tools/session/: mem_context.rs  mem_session_end.rs  mem_session_start.rs  mem_session_summary.rs  mod.rs
src/tools/utility/: mem_doctor.rs  mem_memwal_config.rs  mem_select_sui_account.rs  mem_stats.rs  mem_sui_accounts.rs  mod.rs  status.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
