[package]
name = "eidetic"
version = "0.0.3"
edition = "2024"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1"
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dashmap = "5"
walkdir = "2"
similar = "2"
dirs = "6.0.0"
sqlx = { version = "0.9.0", features = ["sqlite", "chrono", "uuid", "json", "runtime-tokio"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
sha2 = "0.11.0"
hex = "0.4.3"
base64 = "0.22"
ratatui = "0.29"
crossterm = "0.28"
toml_edit = "0.22"
memwal-core = { package = "memwal-core", git = "https://github.com/mcxross/memwal-rs.git", rev = "06fd5c1" }
allocative = "=0.3.4"
