[package]
name = "eidetic"
version = "0.0.4"
edition = "2024"

[dependencies]
rmcp = { version = "1.8.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1"
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dashmap = "5"
walkdir = "2"
similar = "2"
dirs = "6.0.0"
sqlx = { version = "0.9.0", features = ["sqlite", "chrono", "uuid", "json", "runtime-tokio"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
sha2 = "0.11.0"
hex = "0.4.3"
base64 = "0.22"
ratatui = "0.29"
crossterm = "0.28"
toml_edit = "0.22"
memwal-core = { package = "memwal-core", git = "https://github.com/mcxross/memwal-rs.git", rev = "1670306" }
allocative = "=0.3.4"
self_update = { version = "0.44.0", features = ["archive-tar", "compression-flate2"] }
openssl = { version = "0.10.81", features = ["vendored"] }
harbor-core = { git = "https://github.com/mcxross/harbor-rs.git", rev = "1d26bf8" }
keyring = { version = "3", features = ["apple-native", "linux-native"] }
rpassword = "5"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "5f87e04bb21d295ef6b39375a06615d45cbb906c", version = "0.1.9" }
bech32 = "0.9.1"
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.73.2" }
seal-sdk-rs = { git = "https://github.com/astinz/seal-sdk-rs.git", branch = "main", default-features = false, features = ["client", "native-sui-sdk"] }
sui-rpc = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "51ea346" }
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "51ea346", features = ["hash", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"
